--- a/TareaAsincronica2.3.html
+++ b/TareaAsincronica2.3.html
@@ -18,7 +18,7 @@
             let v2=document.getElementById('v2').value;
             let vv1=parseInt(v1,10);
             let vv2=parseInt(v2,10);
-            const res=(vv1*vv2)/100
+            let res=(vv1*vv2)/100
             document.getElementById('res').value=res;
             document.getElementById('op').innerHTML;
         
